# ufr-packages

app_base_pioneer/: CMakeLists.txt  readme.md
app_base_pioneer/etc/: vri-pioneer.service
app_base_pioneer/lib_pioneer/: CMakeLists.txt  Doxyfile  README.md
app_base_pioneer/lib_pioneer/examples/: controlador.c  simple.c  teleop.c  teleop3.c
app_base_pioneer/lib_pioneer/include/: pioneer_p3dx.h
app_base_pioneer/lib_pioneer/src/: pack.c  pioneer_p3dx.c  pioneer_p3dx_pvt.h  tty.c
app_base_pioneer/lib_pioneer/tests/: ut_pack.c
app_base_pioneer/src/: main.c
app_camera_kinect/: CMakeLists.txt  readme.md
app_camera_kinect/src/: main.cpp
app_camera_opencv/: CMakeLists.txt  readme.md
app_camera_opencv/src/: main.cpp
app_camera_orbbec/: CMakeLists.txt
app_camera_orbbec/openni/arm64/: CMakeLists.txt
app_camera_orbbec/src/: main.cpp
app_camera_proxy/: CMakeLists.txt
app_camera_proxy/src/: main.c
app_camera_sub/: CMakeLists.txt
app_camera_sub/src/: main.cpp
app_data/src/: main.cpp
app_detect_yolo/: detect_yolo.py
app_follower_vri/: follower_vri.py
app_lidar_ld08/: CMakeLists.txt
app_lidar_ld08/include/: lipkg.h
app_lidar_ld08/src/: lipkg.cpp  main.cpp
app_lidar_rplidar/: CMakeLists.txt
app_lidar_rplidar/src/: main.cpp
app_microfone/: CMakeLists.txt
app_microfone/src/: main.c
app_pose_mediapipe/: CMakeLists.txt  pose_mediapipe.py
app_pose_yolo/: pose_yolo.py
app_slam_lama/: CMakeLists.txt
app_slam_lama/include/lama/ros/: graph_slam2d_ros.h
app_slam_lama/src/: CMakeLists.txt  graph_slam2d.cpp  graph_slam2d_ros.cpp
app_teleop/: CMakeLists.txt
app_teleop/src/: main.c
app_tts_piper/: CMakeLists.txt
app_tts_piper/src/cpp/: main.cpp
app_view_camera/: CMakeLists.txt
app_view_camera/src/: main.cpp
app_view_detect/: view_detect.py
app_view_lidar/: CMakeLists.txt
app_view_lidar/src/: main.cpp
lib_slam_lama/: CMakeLists.txt
lib_slam_orb3/: CMakeLists.txt
lib_slam_orb3/examples/RGB-D/: rgbd_tum.cc  rgbd_tum_ufr.cpp
web_pioneer/src/: camera1.php  camera2.php  index.php  odom.php  scan.php  voice.php
web_pioneer/src/examples/: index.html
