
install(FILES libs/libOpenNI2.so DESTINATION lib)
install(FILES libs/OpenNI.ini DESTINATION lib)

install(FILES libs/OpenNI2/Drivers/libOniFile.so DESTINATION lib/OpenNI2/Drivers)
install(FILES libs/OpenNI2/Drivers/liborbbec.so DESTINATION lib/OpenNI2/Drivers)
install(FILES libs/OpenNI2/Drivers/OniFile.ini DESTINATION lib/OpenNI2/Drivers)
install(FILES libs/OpenNI2/Drivers/orbbec.ini DESTINATION lib/OpenNI2/Drivers)